fix font size on mobile

--- a/cv/responsive.less
+++ b/cv/responsive.less
@@ -100,7 +100,7 @@ h5 {
     float: left;
   }
   .header.left {
-    font-size: 0.5rem;
+    font-size: 0.7rem;
     width: 39%;
     padding: 8mm 5mm 5mm 5mm;
     @media screen and (min-width: 800px) {
@@ -118,7 +118,7 @@ h5 {
     position: relative;
   }
   .header.right {
-    font-size: 0.6rem;
+    font-size: 0.7rem;
     width: 60%;
     padding: 6mm 0 5mm 5mm;
     @media screen and (min-width: 800px) {
